--- a/Bio/Biography.html
+++ b/Bio/Biography.html
@@ -55,7 +55,14 @@
         </form>
     </div>
     </div>
-
+    <div class="menuNav">
+        <div class="menuBar">
+            <div class="homeBar"></div>
+            <div class="galleryBar"></div>
+            <div class="offersBar"></div>
+            <div class="orderBar"></div>
+        </div>
+        </div>
     <div>
         <p class="footer">-SCAVENGER-</p>
     </div>
